--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div>
   <h1>The Sky Lounge</h1>
   <a  class="l" href="https://reddit.com/r/SkyLounge" target="_blank"><i class="fa fa-reddit-alien"></i></a>
-  <a class="l" href="https://steamcommunity.com/group/TheSkyLounge" target="_blank"><i class="fa fa-steam"></i></a>
+  <a class="l" href="https://steamcommunity.com/groups/TheSkyLounge" target="_blank"><i class="fa fa-steam"></i></a>
   <br/>
   <p>Want to join our Discord chat? <a href="https://discord.gg/0iMPepCx20NygehH" target="_blank">Join us here now!</a></p>
 </div>
