compress background, refactor CSS

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet"/>
 </head>
 <body>
-<div>
-  <h1>The Sky Lounge</h1>
+<div class="main">
+  <h1 class="main-title">The Sky Lounge</h1>
   <a class="l" href="https://reddit.com/r/SkyLounge" target="_blank"><i class="fa fa-reddit-alien"></i></a>
   <a class="l" href="https://steamcommunity.com/groups/TheSkyLounge" target="_blank"><i class="fa fa-steam"></i></a>
   <a class="l" href="https://soundcloud.com/the-sky-lounge" target="_blank"><i class="fa fa-soundcloud"></i></a>
