--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <a class="l" href="https://www.twitch.tv/the_sky_lounge" target="_blank"><i class="fa fa-twitch"></i></a>
   <br/>
   <p>Want to join our Discord chat? <a href="https://discord.gg/0iMPepCx20NygehH" target="_blank">Join us here now!</a></p>
+  <p>Ansa is gey</p>
 </div>
 </body>
 </html>
