--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <body>
 <div class="main">
   <h1 class="main-title">The Sky Lounge</h1>
-  <a class="l" href="https://reddit.com/r/SkyLounge" target="_blank"><i class="fa fa-reddit-alien"></i></a>
-  <a class="l" href="https://steamcommunity.com/groups/TheSkyLounge" target="_blank"><i class="fa fa-steam"></i></a>
-  <a class="l" href="https://soundcloud.com/the-sky-lounge" target="_blank"><i class="fa fa-soundcloud"></i></a>
-  <a class="l" href="https://www.twitch.tv/the_sky_lounge" target="_blank"><i class="fa fa-twitch"></i></a>
+  <a class="l main" href=“http://blog.theskylounge.ga”>Visit our blog!</a><br/>
+  <a class="l l2" href="https://reddit.com/r/SkyLounge" target="_blank"><i class="fa fa-reddit-alien"></i></a>
+  <a class="l l2" href="https://steamcommunity.com/groups/TheSkyLounge" target="_blank"><i class="fa fa-steam"></i></a>
+  <a class="l l2" href="https://soundcloud.com/the-sky-lounge" target="_blank"><i class="fa fa-soundcloud"></i></a>
+  <a class="l l2" href="https://www.twitch.tv/the_sky_lounge" target="_blank"><i class="fa fa-twitch"></i></a>
   <br/>
   <p>Want to join our Discord chat? <a href="https://discord.gg/0iMPepCx20NygehH" target="_blank">Join us here now!</a></p>
 </div>
