--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <a class="l l2" href="https://steamcommunity.com/groups/TheSkyLounge" target="_blank"><i class="fa fa-steam"></i></a>
   <a class="l l2" href="https://soundcloud.com/the-sky-lounge" target="_blank"><i class="fa fa-soundcloud"></i></a>
   <a class="l l2" href="https://www.twitch.tv/the_sky_lounge" target="_blank"><i class="fa fa-twitch"></i></a>
+  <a class="l l2" href="https://plug.dj/theskylounge" target="_blank"><i class="fa fa-headphones"></i></a>
   <br/>
   <p>Want to join our Discord chat? <a href="https://discord.gg/0iMPepCx20NygehH" target="_blank">Join us here now!</a></p>
 </div>
